# zenix

./: .gitignore  Cargo.toml  README.md  build.rs  qemu.rs  rust-toolchain.toml  x86_64-zenix.json
.cargo/: config.toml
docs/: boot.md  getting-started.md  memory.md
kernel/: Cargo.toml  linker.ld
kernel/src/: arch.rs  debug.rs  fs.rs  init.rs  log.rs  main.rs  memory.rs  multitasking.rs  testing.rs  util.rs  utils.rs
kernel/src/arch/: x86_64.rs
kernel/src/arch/x86_64/: acpi.rs  device.rs  devices.rs  gdt.rs  idt.rs  info.rs  init.rs  int_control.rs  interrupt.rs  interrupts.rs  isr_wrapper.rs  mp.rs  paging.rs  segmentation.rs  shutdown.rs  tables.rs
kernel/src/arch/x86_64/acpi/: acpi_error.rs  acpi_info.rs  error.rs  parse.rs
kernel/src/arch/x86_64/device/: qemu.rs  uart_16550.rs
kernel/src/arch/x86_64/interrupt/: context.rs  gate.rs  idt.rs  instructions.rs
kernel/src/arch/x86_64/interrupts/: cpu_ctx.rs  handlers.rs  int_control.rs  isr_wrapper.rs
kernel/src/arch/x86_64/paging/: cr3.rs  entry.rs  flags.rs  page.rs  page_table.rs  size.rs
kernel/src/arch/x86_64/segmentation/: gdt.rs  segment.rs  selector.rs  tss.rs
kernel/src/fs/: fat.rs  vfs.rs
kernel/src/interface/: interrupts.rs
kernel/src/log/: buffer_logger.rs  log_mux.rs  macros.rs  serial_channel.rs  serial_logger.rs
kernel/src/memory/: alloc.rs  frame_alloc.rs  kernel_alloc.rs  map.rs
kernel/src/memory/alloc/: frame_alloc.rs  info.rs  kernel_alloc.rs  phys_box.rs
kernel/src/memory/alloc/frame_alloc/: level.rs  node.rs  zone.rs
kernel/src/memory/map/: manager.rs  mapper.rs  mem_mapper.rs
kernel/src/memory/map/mapper/: errors.rs  props.rs  tree_display.rs
kernel/src/multitasking/: ids.rs  process.rs  process_table.rs  scheduler.rs
kernel/src/multitasking/process/: process_table.rs
kernel/src/multitasking/scheduler/: error.rs  thread.rs  thread_box.rs
kernel/src/util/: address.rs  bitmap.rs  fixed_vec.rs  spin.rs  static_ptr.rs
kernel/src/util/spin/: lock.rs  once.rs  singleton.rs
kernel/src/utils/: interrupt_guard.rs  processor_local.rs
libraries/bootinfo/: Cargo.toml
libraries/bootinfo/src/: lib.rs
libraries/elf/: Cargo.toml
libraries/elf/src/: header.rs  lib.rs  reader.rs  structure.rs
libraries/elf/src/header/: ident.rs
libraries/elf/src/reader/: error.rs  header.rs  ident.rs  program_header.rs  section_header.rs
libraries/elf/src/structure/: header.rs  ident.rs  program_header.rs  segment_header.rs
libraries/essentials/: Cargo.toml
libraries/essentials/src/: address.rs  array_init.rs  display.rs  fixed_vec.rs  lib.rs  nb.rs  panic_once.rs  spin.rs
libraries/essentials/src/display/: quoteless.rs  readable_size.rs
libraries/essentials/src/nb/: bounded_queue.rs  counted_ptr.rs  queue.rs
libraries/essentials/src/spin/: once.rs  singleton.rs
libraries/path/: Cargo.toml
libraries/path/src/: lib.rs
libraries/test_runner/: Cargo.toml
libraries/test_runner/src/: lib.rs
libraries/x86_64/: Cargo.toml
libraries/x86_64/src/: acpi.rs  cpuid.rs  device.rs  halt.rs  interrupt.rs  lib.rs  msr.rs  paging.rs  port.rs  privilege.rs  rdmsr.rs  rflags.rs  segmentation.rs  tables.rs  wrmsr.rs
libraries/x86_64/src/acpi/: rsdp.rs  rsdt.rs  sdt_header.rs  sdt_madt.rs  sdt_root.rs
libraries/x86_64/src/cpuid/: cpu_features.rs
libraries/x86_64/src/device/: apic.rs  pic_8259.rs  pit.rs  qemu.rs  uart_16550.rs  vga.rs
libraries/x86_64/src/interrupt/: context.rs  gate.rs  idt.rs  instructions.rs
libraries/x86_64/src/paging/: cr2.rs  cr3.rs  entry.rs  flags.rs  page.rs  page_table.rs  size.rs
libraries/x86_64/src/segmentation/: gdt.rs  segment.rs  selector.rs  tss.rs
meta/: lib.rs  multiboot_build.rs  qemu.rs  runner.rs
pre-kernel/: Cargo.toml  linker.ld  target.json
pre-kernel/src/: boot.s  boot_info.rs  bump_memory.rs  gdt.rs  long_mode.rs  main.rs  multiboot.rs  paging.rs  regions.rs  rsdp_detection.rs  vga.rs
wiki/: README.md  boot.md  build.md  getting-started.md  interrupts.md  introduction.md  memory.md
wiki/diagrams/boot-package/: bp.drawio
wiki/diagrams/bump-memory/: bm.drawio
wiki/diagrams/pre-kernel-flow/: seq.drawio
