cargo-features = ["profile-rustflags"]

[package]
name = "zenix"
build = "meta/multiboot_build.rs"
version.workspace = true
license.workspace = true

[workspace.package]
version = "0.1.0"
license = "GLPv2"

[[bin]]
name = "zenix"
path = "meta/qemu.rs"

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
resolver = "2"
members = [
	"pre-kernel",
	"kernel",

	"libraries/essentials",
	"libraries/x86_64",
	"libraries/bootinfo",
]

[workspace.dependencies]
essentials = { path = "libraries/essentials" }
x86_64 = { path = "libraries/x86_64" }
bootinfo = { path = "libraries/bootinfo" }


[profile.pre-kernel-release]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.pre-kernel-debug]
inherits = "release"
debug = true
strip = "none"
split-debuginfo = "packed"
opt-level = 1
