cargo-features = ["profile-rustflags"]

[package]
name = "zenix"
build = "meta/multiboot_build.rs"
version.workspace = true
license.workspace = true

[workspace.package]
version = "0.1.0"
license = "GLPv2"


[lib]
name = "runner_common"
path = "meta/lib.rs"

[[bin]]
name = "runner"
path = "meta/runner.rs"


[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
resolver = "2"
members = [
	"pre-kernel",
	"kernel",

	"libraries/essentials",
	"libraries/x86_64",
	"libraries/bootinfo",
	"libraries/elf",
	"libraries/test_runner",
]

default-members = [
	".",
	"libraries/essentials",
	"libraries/x86_64",
	"libraries/elf",
]

[workspace.dependencies]
essentials = { path = "libraries/essentials" }
x86_64 = { path = "libraries/x86_64" }
bootinfo = { path = "libraries/bootinfo" }
elf = { path = "libraries/elf" }
test_runner = { path = "libraries/test_runner" }


[profile.pre-kernel-release]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.pre-kernel-debug]
inherits = "release"
debug = true
strip = "none"
split-debuginfo = "packed"
