cargo-features = ["profile-rustflags"]

[package]
name = "zenix"
build = "meta/multiboot_build.rs"
version.workspace = true
license.workspace = true

[workspace.package]
version = "0.1.0"
license = "GLPv2"


[lib]
name = "runner_common"
path = "meta/lib.rs"

[[bin]]
name = "runner"
path = "meta/runner.rs"


[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
resolver = "2"
members = [
	"pre-kernel",
	"kernel",

	"libraries/essentials",
	"libraries/x86_64",
	"libraries/bootinfo",
	"libraries/elf",
	"libraries/test_runner",
	"libraries/path",
]

default-members = [
	".",
	"libraries/essentials",
	"libraries/bootinfo",
	"libraries/x86_64",
	"libraries/elf",
	"libraries/path",
]

[workspace.dependencies]
essentials = { path = "libraries/essentials" }
x86_64 = { path = "libraries/x86_64" }
bootinfo = { path = "libraries/bootinfo" }
elf = { path = "libraries/elf" }
test_runner = { path = "libraries/test_runner" }
path = { path = "libraries/path" }

[profile.release]
strip = true

[profile.pre-kernel-release]
inherits = "release"
strip = true
opt-level = "z"
panic = "abort"

[profile.pre-kernel-debug]
inherits = "release"
debug = true
strip = "none"
split-debuginfo = "packed"
