[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
# TODO: we should write our own bootloader in the future
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }

[package.metadata.bootimage]
run-args = [
    #    "-S",
    "-device", "isa-debug-exit",
    "-gdb", "tcp::1234",
    "-serial", "stdio",
    "-display", "none"
]
test-args = [
    "-device", "isa-debug-exit", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 19
test-timeout = 300          # (in seconds)
